--- a/src/app/poster/poster.component.html
+++ b/src/app/poster/poster.component.html
@@ -59,6 +59,7 @@
     <watch-list-marker
       *ngIf="showWatchlistMarker"
       [movieId]="movieId"
+      [size]="size"
     ></watch-list-marker>
   </div>
 </ng-container>
