--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -13,7 +13,10 @@
     <mat-card class="poll-container">
       <div class="poll-header">
         <div class="flex">
-          <h2>{{ poll.name }}</h2>
+          <div class="flex-column">
+            <h2>{{ poll.name }}</h2>
+            <div class="poll-date" *ngIf="poll.date"><i class="fa-regular fa-calendar"></i> {{ poll.date?.toDate() | date: 'd/M/YYYY' }}</div>
+          </div>
           <mat-icon
             class="share-icon cursor-pointer"
             title="Click to share!"
@@ -21,6 +24,9 @@
             style="overflow: visible"
             >share</mat-icon
           >
+        </div>
+        <div class="poll-description">
+          {{ poll.description || '' | hyphen }}
         </div>
       </div>
       <ng-container *ngIf="status.user">
@@ -41,11 +47,29 @@
           >
             <mat-icon class="animation-rotate">casino</mat-icon> Pick random
           </button>
+          <button
+            mat-button
+            color="primary"
+            (click)="editPoll(poll)"
+          >
+            Edit
+          </button>
+          
         </div>
       </ng-container>
       <span [class.show]="poll.selectMultiple" class="vote-multiple"
         >You can vote multiple options. Yay!</span
       >
+      <div *ngIf="poll.moviepoll" class="condensed-view-toggle">
+        <mat-slide-toggle
+          matTooltip="Condensed view"
+          class=""
+          [checked]="useCondensedMovieView"
+          (change)="setCondensedViewState($event.checked)"
+          [(ngModel)]="useCondensedMovieView">
+          <mat-icon>{{ useCondensedMovieView ? 'density_small': 'density_large'}}</mat-icon>
+      </mat-slide-toggle>
+      </div>
 
       <div class="top-items-center">
         <div
@@ -81,7 +105,8 @@
         <ng-container
           *ngFor="
             let pollItem of pollItems | sort : (sortType$ | async);
-            trackBy: trackById
+            trackBy: trackById;
+            index as i
           "
         >
           <ng-container *ngIf="{ hasVoted: hasVoted(pollItem) }; let voted">
@@ -137,7 +162,7 @@
               *ngIf="pollItem.movieId"
               class="normal-margin"
               [hasVoted]="voted.hasVoted"
-              [voteable]="true"
+              [voteable]="(poll.movieList || poll.rankedMovieList) ? false : true"
               [pollItem]="pollItem"
               [editable]="userService.isCurrentUser(pollItem.creator)"
               (optionClicked)="pollItemClick(poll, pollItems, $event)"
@@ -148,6 +173,8 @@
               [progressBarWidth]="getBgWidth(pollItems, pollItem)"
               [showCreator]="poll.showPollItemCreators"
               [useSeenReaction]="poll.useSeenReaction"
+              [condensedView]="useCondensedMovieView"
+              [orderNumber]="poll.rankedMovieList ? i + 1 : false"
               (reaction)="reaction(poll, pollItems, $event)"
               (setDescription)="setDescription(poll, pollItems, $event)"
               (addMovie)="addMoviePollItem(poll, pollItems, $event)"
