--- a/src/app/watch-list-marker/watch-list-marker.component.html
+++ b/src/app/watch-list-marker/watch-list-marker.component.html
@@ -1,10 +1,12 @@
 <ng-container *ngIf="movieId$ | async; let movieId">
   <i
     class="fa-bookmark fa-regular user-select-none cursor-pointer watchlist"
-    *ngIf="{ watchlisted: (watchlisted$ | async) }; let s"
+    *ngIf="{ watchlisted: (watchlisted$ | async)}; let s"
     [ngClass]="{
       'fa-solid active': s.watchlisted,
-      'fa-regular': !s.watchlisted
+      'fa-regular': !s.watchlisted,
+      'size-xs': 'xs' === size,
+      'size-xxs': 'xxs' === size
     }"
     (click)="click(movieId, s.watchlisted)"
   ></i>
