--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,90 +1,15 @@
 @use '@angular/material' as mat;
-// Plus imports for other components in your app.
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat.core();
-
-$custom-primary-palette: (
-    50 : #ffeef3,
-    100 : #ffd4e1,
-    200 : #ffb8cd,
-    300 : #ff9cb8,
-    400 : #ff86a9,
-    500 : #d9c6ee,
-    600 : #ff6992,
-    700 : #d9c6ee,
-    800 : #ff547e,
-    900 : #ff426c,
-    A100 : #ffffff,
-    A200 : #ffffff,
-    A400 : #ffeaee,
-    A700 : #ffd0da,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #000000,
-        400 : #000000,
-        500 : #000000,
-        600 : #000000,
-        700 : #000000,
-        800 : #000000,
-        900 : #000000,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #000000,
-        A700 : #000000,
-    )
-);
-
-$custom-primary-dark-palette: (
-    50 : #e7fef7,
-    100 : #c4fbeb,
-    200 : #9cf9dd,
-    300 : #333333,
-    400 : #57f5c5,
-    500 : #79f4bc,
-    600 : #33f1b5,
-    700 : #333333,
-    800 : #24eda4,
-    900 : #333333,
-    A100 : #ffffff,
-    A200 : #e8fff5,
-    A400 : #b5ffdf,
-    A700 : #9cffd4,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #74f7cf,
-        400 : #000000,
-        500 : #000000,
-        600 : #000000,
-        700 : #2cefac,
-        800 : #000000,
-        900 : #17ea96,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #000000,
-        A700 : #000000,
-    )
-);
-
-$app-primary: mat.define-palette($custom-primary-palette, 700, 300, 900);
-$app-accent:  mat.define-palette(mat.$cyan-palette, A200, A100, A400);
-$app-warn:    mat.define-palette(mat.$red-palette);
-$app-theme: mat.define-light-theme($app-primary, $app-accent, $app-warn);
-
-@include mat.all-component-themes($app-theme);
-
-// Define an alternate dark theme.
-$app-dark-primary: mat.define-palette($custom-primary-dark-palette, 700, 300, 900);
-$app-dark-accent:  mat.define-palette(mat.$amber-palette, A200, A100, A400);
-$app-dark-warn:    mat.define-palette(mat.$deep-orange-palette);
-$app-dark-theme:   mat.define-dark-theme($app-primary, $app-accent, $app-warn);//mat-dark-theme($app-dark-primary, $app-dark-accent, $app-dark-warn);
-
-.dark-theme {
-  @include mat.all-component-themes($app-dark-theme);
-}
+$theme: mat.define-theme((
+  color: (
+    theme-type: light,
+    primary: mat.$magenta-palette,
+  ),
+  typography: (
+    brand-family: 'Product Sans',
+    bold-weight: 900
+  ),
+  density: (
+    scale: -1
+  )
+));
